// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepIcon should display active icon when given active status 1`] = `
<i
  className="icon active"
/>
`;

exports[`StepIcon should display completed icon when given completed status 1`] = `
<svg
  className="completed icon"
  fill="currentColor"
  height="1em"
  viewBox="0 0 16 16"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M13.854 3.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3.5-3.5a.5.5 0 11.708-.708L6.5 10.293l6.646-6.647a.5.5 0 01.708 0z"
    fillRule="evenodd"
    stroke="currentColor"
    strokeWidth="1px"
  />
</svg>
`;

exports[`StepIcon should display error icon when given error status 1`] = `
<svg
  className="error icon"
  fill="currentColor"
  height="1em"
  viewBox="0 0 16 16"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M7.002 11a1 1 0 112 0 1 1 0 01-2 0zM7.1 4.995a.905.905 0 111.8 0l-.35 3.507a.552.552 0 01-1.1 0L7.1 4.995z"
  />
</svg>
`;

exports[`StepIcon should display pending icon when given pending status 1`] = `
<i
  className="icon pending"
/>
`;
